tests/paczka1/small_fuzzy/68461703.err
Error in line 2: ecpJZX S11 60,4
Error in line 6: ebU4jmrRrVy A851 29,6
Error in line 1: A851 A851 85,2
